[package]
name = "rust_blockchain_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["io-util", "io-std", "rt", "macros", "rt-multi-thread", "sync", "time"]}
libp2p = {version = "0.39", features = ["tcp-tokio", "mdns"]}
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"